<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activities.WelcomeActivity">

    <!-- Lottie Animation -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/main_anim"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:lottie_rawRes="@raw/couple"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/app_name"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintWidth_percent="0.8" />

    <!-- App Name -->
    <TextView
        android:id="@+id/app_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceDisplayMedium"
        android:fontFamily="@font/poppins_semibold"
        android:includeFontPadding="false"
        android:text="@string/app_name"
        app:layout_constraintTop_toBottomOf="@id/main_anim"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Tag Line -->
    <TextView
        android:id="@+id/tag_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:text="@string/tag_line"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintStart_toStartOf="@id/app_name"
        app:layout_constraintEnd_toEndOf="@id/app_name"
        android:layout_marginTop="8dp" />

    <!-- Sub Tag Line -->
    <TextView
        android:id="@+id/sub_tag_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        android:text="@string/sub_tag_line"
        app:layout_constraintTop_toBottomOf="@id/tag_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- Buttons Container -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/sub_tag_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="24dp">

        <!-- Get Started Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/get_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            app:cornerRadius="20dp"
            android:fontFamily="@font/just_sans_exbold"
            android:textAllCaps="false"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="@string/get_started"/>

        <!-- Continue with Google Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_with_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            app:cornerRadius="20dp"
            android:fontFamily="@font/just_sans_exbold"
            android:textAllCaps="false"
            app:icon="@drawable/google"
            app:iconGravity="start"
            android:layout_marginStart="8dp"
            android:text="@string/continue_with_google" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
