<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:scrollbars="none"
     android:background="@drawable/gradient_background"
     android:padding="24dp"
     android:clipChildren="false"
     android:clipToPadding="false"
     android:overScrollMode="never"
     android:animateLayoutChanges="true"
     tools:context=".activities.UserRegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent">

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:textAppearance="?attr/textAppearanceDisplayMedium"
             app:layout_constraintTop_toTopOf="parent"
             android:includeFontPadding="false"
             app:layout_constraintStart_toStartOf="parent"
             android:fontFamily="@font/poppins_semibold"
             android:textColor="@android:color/white"
             android:layout_marginTop="24dp"
             android:id="@+id/app_name"
             android:text="@string/app_name" />

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:includeFontPadding="false"
             app:layout_constraintStart_toStartOf="@id/app_name"
             android:fontFamily="@font/poppins_medium"
             android:textColor="#ffc100"
             app:layout_constraintTop_toBottomOf="@id/app_name"
             android:id="@+id/tag_line"
             android:text="@string/tag_line" />

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:background="@drawable/dashed_underline"
             android:textAppearance="?attr/textAppearanceTitleLarge"
             android:includeFontPadding="false"
             app:layout_constraintStart_toStartOf="@id/app_name"
             android:fontFamily="@font/poppins_semibold"
             android:textColor="@android:color/white"
             android:layout_marginTop="64dp"
             app:layout_constraintTop_toBottomOf="@id/tag_line"
             android:id="@+id/user_register_hint"
             android:text="@string/user_register_hint" />

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:textAppearance="?attr/textAppearanceTitleMedium"
             android:includeFontPadding="false"
             app:layout_constraintStart_toStartOf="parent"
             android:fontFamily="@font/poppins_semibold"
             android:textColor="@android:color/white"
             android:layout_marginTop="18dp"
             app:layout_constraintTop_toBottomOf="@id/user_register_hint"
             android:id="@+id/user_name"
             android:text="User Name" />

        <EditText
             android:layout_height="50dp"
             android:layout_width="match_parent"
             android:textColor="@android:color/white"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/user_name"
             android:background="@drawable/edit_text_background"
             android:hint="@string/app_name"
             android:minHeight="48dp"
             android:includeFontPadding="false"
             app:layout_constraintStart_toStartOf="parent"
             android:fontFamily="@font/poppins_medium"
             android:backgroundTint="@null"
             app:layout_constraintEnd_toEndOf="parent"
             android:paddingHorizontal="12dp"
             android:inputType="textPersonName"
             android:id="@+id/username_input" />

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:textAppearance="?attr/textAppearanceTitleMedium"
             android:includeFontPadding="false"
             app:layout_constraintStart_toStartOf="parent"
             android:fontFamily="@font/poppins_semibold"
             android:textColor="@android:color/white"
             android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/username_input"
             android:id="@+id/user_email"
             android:text="@string/enter_email" />

        <EditText
             android:layout_height="50dp"
             android:layout_width="match_parent"
             android:textColor="@android:color/white"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/user_email"
             android:background="@drawable/edit_text_background"
             android:hint="@string/email_hint"
             android:minHeight="48dp"
             android:includeFontPadding="false"
             app:layout_constraintStart_toStartOf="parent"
             android:fontFamily="@font/poppins_medium"
             android:backgroundTint="@null"
             app:layout_constraintEnd_toEndOf="parent"
             android:paddingHorizontal="12dp"
             android:inputType="textEmailAddress"
             android:id="@+id/email_input" />

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:textAppearance="?attr/textAppearanceTitleMedium"
             android:includeFontPadding="false"
             app:layout_constraintStart_toStartOf="parent"
             android:fontFamily="@font/poppins_semibold"
             android:textColor="@android:color/white"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/email_input"
             android:id="@+id/user_password"
             android:text="@string/enter_password" />

        <EditText
             android:layout_height="50dp"
             android:layout_width="match_parent"
             android:textColor="@android:color/white"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/user_password"
             android:background="@drawable/edit_text_background"
             android:hint="@string/password_hint"
             android:minHeight="48dp"
             android:includeFontPadding="false"
             app:layout_constraintStart_toStartOf="parent"
             android:fontFamily="@font/poppins_medium"
             android:backgroundTint="@null"
             android:drawableEnd="@drawable/eye_off"
             android:drawablePadding="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             android:paddingHorizontal="12dp"
             android:inputType="textPassword"
             android:id="@+id/password_input" />

        <Button
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             app:backgroundTint="@null"
             android:textSize="16sp"
             android:textColor="@android:color/black"
             android:layout_marginTop="64dp"
             app:layout_constraintTop_toBottomOf="@id/password_input"
             android:background="@drawable/button_background"
             android:minHeight="50dp"
             app:layout_constraintStart_toStartOf="parent"
             android:fontFamily="@font/poppins_semibold"
             android:textAllCaps="false"
             app:layout_constraintEnd_toEndOf="parent"
             android:text="Register"
             android:onClick="validateDetails"
             android:id="@+id/register_button" />

        <Button
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             app:backgroundTint="@android:color/white"
             android:onClick="loginActivity"
             android:textSize="16sp"
             android:textColor="@android:color/black"
             android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@id/register_button"
             android:background="@drawable/button_background"
             android:minHeight="50dp"
             app:layout_constraintStart_toStartOf="parent"
             android:fontFamily="@font/poppins_semibold"
             android:textAllCaps="false"
             app:layout_constraintEnd_toEndOf="parent"
             android:text="Login" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>